Test -Xlog:gc,gc+init