@@ -45,6 +45,7 @@
  *
  * @run main/othervm -Xlog:gc=info,gc+init=off TestVerboseMemory true
  * @run main/othervm -Xlog:gc=off,gc+init=info TestVerboseMemory false
+ * @run main/othervm -Xlog:gc,gc+init TestVerboseMemory true
  *
  * @run main/othervm -Xlog:all=trace:file=vm.log TestVerboseMemory false
  */
